Added Respiratory effciency tests, table in general examination and spirometry

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -7,7 +7,10 @@
 \pagestyle{plain}
 \renewcommand{\chaptername}{Experiment}
 \usepackage[utf8]{inputenc}
+\usepackage{float}
+\restylefloat{table}
 \usepackage{pdfrender}
+\usepackage{amsmath}
 \usepackage{xcolor}
 \usepackage{ae}
 \usepackage{multirow}
@@ -1224,6 +1227,28 @@
 \item{	Differential cyanosis}
 \end{itemize}
 \end{itemize}
+\begin{table}[H]
+	\centering
+	\begin{tabular}{|p{.5in}|p{1in}|p{2.25in}|p{2.25in}|} 
+		\hline
+		\textbf{S.No.} & \textbf{Features}                                                 & \textbf{Central			Cyanosis}                                                      & \textbf{Peripheral			Cyanosis}                                           \\ 
+		\hline
+		1.							       & Mechanism                                                         & Right			to left shunts or abnormal Hb or inadequate O­2			saturation             & Peripheral			stasis of blood                                             \\ 
+		\hline
+		2.							        & Site                                                              & Whole			body (Central parts of the body such as tongue plus peripherial			parts) & Nail			beds, nose tip, ear lobe, extremities (tips of fingers and toes)  \\ 
+		\hline
+		3.							       & Associated			with                                                 & Clubbing			and polycythemia							                                               & Not			associated with any other symptoms                                 \\ 
+		\hline
+		4.							        & Extremities                                                       & Warm                                                                             & Cold                                                                     \\ 
+		\hline
+		5.~							       & \begin{tabular}[c]{@{}l@{}}On			Warming\\Extremities\end{tabular} & No			change                                                                      & Disappears                                                               \\ 
+			\hline
+			6.							        & O2			Inhalation                                                   & Slight			improvement                                                             & No			change                                                              \\ 
+			\hline
+			7.							        & Arterial			PaO2							                                            & \textless{}85\%                                                                  & Normal                                                                   \\
+			\hline
+	\end{tabular}
+\end{table}
 
 \subsection*{Clubbing}
 Bulbous enlargement of soft parts of the terminal phalanges with over curving of the nails both longitudinally and transversely.
@@ -1534,6 +1559,153 @@ Examination of respiratory system is carried out in the following lung areas.
 \item{What are Wheezes and Crackles?}
 \end{enumerate}
 %-------------------------}}}
+%------------Respiratory Efficiency test---{{{
+
+															\chapter*{\centering Respiratory Efficiency Test}
+
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+															\subsection*{Aim}
+															To assess the efficiency of the respiratory muscles.
+															\subsection*{Apparatus}
+															Inch tape, BP apparatus, Peak flow meter, Match stick, Candle and Stop watch .
+															\subsection*{Tests:}
+															\begin{enumerate}
+																\item{Breath holding time (BHT):\par Ask the subject to sit quietly for a few minutes breathing normally. Ask the subject to pinch his nostrils with the thumb and index finger and to hold the breath after a normal inspiration and start the stop watch. The time duration for which the subject is able to hold the breath is noted. Make three such observations at an interval of five minutes. Similarly, record the breath holding times after quiet expiration, deep inspiration and deep expiration.i%
+																	epackage{multirow}
+																	
+																	\begin{table}[H]
+																		\centering
+\begin{tabular}{|l|l|l|l|l|} 
+																			\hline
+																			\multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}\\Breathholding at the end of \end{tabular}} & \multicolumn{3}{l|}{Time(sec)} & \multirow{2}{*}{BestValue}  \\ 
+																				\cline{2-4}
+																				                                                                                        & 1 & 2 & 3                      &                             \\ 
+																															\hline
+																															QuietInspiration                                                                        &   &   &                        &                             \\ 
+																															\hline
+																															QuietExpiration                                                                         &   &   &                        &                             \\ 
+																															\hline
+																															DeepInspiration                                                                         &   &   &                        &                             \\ 
+																															\hline
+																															DeepExpiration                                                                          &   &   &                        &                             \\
+																															\hline
+																		\end{tabular}
+																	\end{table}
+																		}
+																\item{Expiratory blast test:\par BP apparatus is required for this test. The rubber tube leading from the mercury reservoir to the cuff is disconnected. Ask the subject to take a deep inspiration and blow into the tube to raise the mercury column to the highest level possible. A normal subject can raise the mercury column to 65-100 mmHg or more during a single forceful expiration.}
+																\item{Snider’s test:\par A normal adult should be able to blow out a burning match stick or candle held at a distance of 30 cms in front of his face, with a single forceful expiration}
+																\item{Respiratory endurance test: \par Ask the subject to take a deep breath, close his nostrils and blow into the rubber tubing to raise the mercury column to 40 mmHg level in the manometer. He is instructed to maintain the mercury level at 40mmHg as long as possible. Normal person can hold it at the same level for 40-70 seconds or more.}
+																\item{Peak expiratory flow rate: \par Wright’s Peak flow meter measures the maximum flow rate which is achieved during a single forced expiration. It does not measure the volume of air exhaled.\newline
+																	\paragraph{Procedure}
+																	Ask the subject to take a deep breath and then to blow hard into the mouth piece of the flow meter forcefully with his nostrils closed. The reading on the dial is the PEFR in litres/min. Repeat the procedure thrice at an interval of 1-2 minutes. Normal range is 300-500 litres/minute.}
+															\end{enumerate}
+\subsection*{Questions:}
+\begin{enumerate}
+\item{ What is the normal breath holding time?}
+\item{ What is expiratory blast test?}
+\item{ Define PEFR? What is the normal value?}
+\item{ What are the uses of Wright’s peak flow meter in clinical practice?}
+\end{enumerate}
+%----------------------------}}}
+%----------------Spirometery---------------{{{
+
+															\chapter*{\centering Spirometry}
+
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+															\subsection*{Aim:}
+\addfig{%
+	\begin{figure}[H]
+		\begin{subfigure}{\textwidth}
+			\centering
+			\includegraphics[scale=.5]{./clinicalPhysioPic/spirometry.jpg}
+			\caption{Spirometer}
+			\label{Spirometer}
+		\end{subfigure}
+		\hspace{\fill}
+		\vspace{1cm}
+		\begin{subfigure}{\textwidth}
+			\centering
+			\includegraphics[scale=.5]{./clinicalPhysioPic/spirogram.jpg}
+			\caption{Lung Volumes \& Capacities}
+			\label{lungVolumes}
+		\end{subfigure}
+	\end{figure}
+	}
+															To measure Tidal Volume, Expiratory Reserve Volume and Vital Capacity in the given subject.
+															\subsection*{Apparatus Required:}
+															Student’s Spirometer
+															\subsection*{Spirometer :}
+															Student’s Spirometer is also known as Vitalograph or Simple Spirometer. It consists of a double-walled metal cylinder. The outer container is filled with water in which a light-metal gas bell of 6 litre capacity floats. The water acts as an air-tight seal. The bell is attached to a counter-weight by a chain passing over a graduated frictionless pulley. The pulley bears a spring-mounted indicator needle that moves with the pulley and indicates the volume of air present in the bell. A corrugated rubber tube with a mouthpiece acts as the inlet tube.
+															\subsection*{Procedure}
+															All the procedures should be done in standing posture.
+															\begin{enumerate}
+																\item{															\textbf{Tidal Volume:}	The volume of air inspired or expired during quiet respiration}
+																	\begin{itemize}
+\item{															Set the pointer at zero}
+\item{															Ask the subject to take a few normal breaths with nostrils closed}
+\item{															Ask the subject to breathe out into the mouth piece at the end of normal inspiration}
+\item{															Record the reading as Tidal Volume}
+																	\end{itemize}
+																\item{															\textbf{Expiratory Reserve Volume:} The volume of air that can be expired forcefully after a normal expiration}
+																	\begin{itemize}
+\item{															Set the pointer at zero}
+\item{															Ask the subject to take a few normal breaths with nostrils closed}
+\item{															At the end of normal expiration ask the subject to breathe out forcefully into the mouthpiece to the maximum}
+\item{															Record the reading as Expiratory Reserve Volume}
+																	\end{itemize}
+																\item{															\textbf{Vital Capacity :} The maximum volume of air that can be forcibly expired after maximum inspiration}
+																\begin{itemize}
+\item{															Set the pointer at zero}
+\item{															Ask the subject to take a few normal breaths with nostrils closed}
+\item{															Ask the subject to inspire to the maximum and then to expire forcefully and completely into the mouthpiece}
+\item{															Record the reading as Vital Capacity}
+															\end{itemize}
+															\end{enumerate}
+
+															\subsection*{Result}
+														\begin{itemize}
+														\item[]	Tidal Volume						=\rule{5cm}{1mm}	
+\item[]		Expiratory Reserve Volume				=\rule{5cm}{1mm}
+\item[]			Vital Capacity						=\rule{5cm}{1mm}	
+														\end{itemize}
+
+														\subsection*{Observations}
+
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Name:}  & \textbf{Age:}\\
+																\textbf{Sex:}   & \textbf{Occupation:}
+															\end{tabular}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|l|l|l|} 
+	\hline
+	\textbf{Lung			Volumes \& Capacities}~							 &  \textbf{Reading			1} &  2\textbf{Reading			2} &  \textbf{Reading			3}  \\ 
+	\hline
+	TidalVolume                                   &                       &                        &                        \\ 
+	\hline
+	ExpiratoryReserve Volume                      &                       &                        &                        \\ 
+	\hline
+	VitalCapacity                                 &                       &                        &                        \\
+	\hline
+\end{tabular}
+\end{table}
+														\subsection*{Questions :}
+														\begin{enumerate}
+\item{														 What are the factors affecting Vital Capacity ?}
+\item{														 Name the volumes and capacities that cannot be measured directly using Student’s Spirometer.}
+\item{														 What is Breathing Reserve ?}
+\item{														 What is Dyspnoeic Index ?}
+\item{														 Give the normal values of Tidal Volume, Vital Capacity \& Expiratory Reserve Volume in adult men and women.}
+\item{														 Comment on FVC and FEV1 \% in Restrictive and Obstructive lung disorders.}
+														 Define Dead space. Write a note on Anatomical and Physiological Dead space.
+
+														\end{enumerate}
+														%---------}}}
 											    \end{document}
 											    
 
