started with pulse examination

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -1057,7 +1057,7 @@
 															\end{tabular}
 															A thorough general examination is done before any systemic examination. Vital information such as name, age, sex, height, weight, occupation and address of the individual are recorded. The subject is comfortably seated. The room is well illuminated. It is always preferable to examine under good day light. The examiner should always be on the right side of the subject while examining.
 															\section*{The following observations are recorded:}
-															\subsection*{Level Of Consciousness}
+															\section*{Level Of Consciousness}
 														\addfig{%
 															\begin{figure}[h]
 																\begin{subfigure}[t]{.23\textwidth}
@@ -1147,11 +1147,11 @@
 															\end{figure}
 															}
 															The level of consciousness can be clear sensorium, drowsiness, stupor, semicoma and coma.
-															\subsection*{Orientation To Time, Place And Person}
+															\section*{Orientation To Time, Place And Person}
 															Ask about the day, date, month, year and time of day. Subject should know where they are (e.g. home or hospital) Similarly test his orientation towards person.
-															\subsection*{Body Build And Nourishment}
+															\section*{Body Build And Nourishment}
 															Build refers to skeletal frame work and nourishment refers to muscular bulk. It should be observed whether he is well / moderately / thin built and nourished.
-															\subsection*{Temperature}
+															\section*{Temperature}
 															Recorded by a clinical thermometer.\newline
 															\begin{itemize}
 																\item{\textbf{Method of recording temperature:}}
@@ -1166,7 +1166,7 @@
 																	\end{itemize}
 															\end{itemize}
 
-															\subsection*{Pallor}
+															\section*{Pallor}
 															Pallor of the skin and mucous membrane.
 															\begin{itemize}
 																\item{\textbf{Areas to look for pallor}}
@@ -1185,7 +1185,7 @@
 																		\item{Shock}
 																	\end{itemize}
 															\end{itemize}
-															\subsection*{Jaundice ( Icterus )}
+															\section*{Jaundice ( Icterus )}
 															Yellowish discoloration of the sclera, skin and the mucous membrane due to presence of excess bilirubin in blood of more than 2 $mg$\%
 															\begin{itemize}
 																\item{\textbf{Areas to look for jaundice}}
@@ -1208,7 +1208,7 @@
 																		\item{Hypothyroidism.}
 																	\end{itemize}
 															\end{itemize}
-															\subsection*{Cyanosis}
+															\section*{Cyanosis}
 															It is the bluish discoloration of the skin and mucous membrane due to an increased quantity of reduced hemoglobin concentration of more than 5 gm in 100 ml of blood.
 															\begin{itemize}
 																\item{\textbf{Areas to look for cyanosis:}}
@@ -1233,7 +1233,7 @@
 		\hline
 		\textbf{S.No.} & \textbf{Features}                                                 & \textbf{Central			Cyanosis}                                                      & \textbf{Peripheral			Cyanosis}                                           \\ 
 		\hline
-		1.							       & Mechanism                                                         & Right			to left shunts or abnormal Hb or inadequate O­2			saturation             & Peripheral			stasis of blood                                             \\ 
+		1.							       & Mechanism                                                         & Right to left shunts or abnormal Hb or inadequate O$_2$ saturation             & Peripheral			stasis of blood                                             \\ 
 		\hline
 		2.							        & Site                                                              & Whole			body (Central parts of the body such as tongue plus peripherial			parts) & Nail			beds, nose tip, ear lobe, extremities (tips of fingers and toes)  \\ 
 		\hline
@@ -1250,7 +1250,7 @@
 	\end{tabular}
 \end{table}
 
-\subsection*{Clubbing}
+\section*{Clubbing}
 Bulbous enlargement of soft parts of the terminal phalanges with over curving of the nails both longitudinally and transversely.
 \begin{itemize}
 	\item{\textbf{Schamroth’s sign:}}
@@ -1267,7 +1267,7 @@ Bulbous enlargement of soft parts of the terminal phalanges with over curving of
 	\end{itemize}
 \end{itemize}
 
-\subsection*{Oedema}
+\section*{Oedema}
 It is the condition where there is accumulation of free fluid in the interstitial space. Pedal oedema is examined by pressing the skin and the tissue against the tibial bone just above the medial malleolus, sustaining the pressure for at least 15 seconds and releasing the pressure to look for pitting, if any. In bed ridden subjects oedema is examined by pressing over the presacral region.
 
 \begin{itemize}
@@ -1278,7 +1278,7 @@ It is the condition where there is accumulation of free fluid in the interstitia
 \end{itemize}
 \end{itemize}
 
-\subsection*{Lymphadenopathy}
+\section*{Lymphadenopathy}
 \begin{itemize}
 	\item{\textbf{Group of nodes to be examined:}}
 		\begin{itemize}
@@ -1298,7 +1298,7 @@ It is the condition where there is accumulation of free fluid in the interstitia
 	\end{itemize}
 \end{itemize}
 
-\subsection*{Questions}
+\section*{Questions}
 \begin{enumerate}
 \item{Where will you look for pallor?}
 \item{What is cyanosis?}
@@ -1310,7 +1310,7 @@ It is the condition where there is accumulation of free fluid in the interstitia
 
 \newpage
 
-\subsection*{\centering Case Sheet - General Examination Of The Subject}
+\section*{\centering Case Sheet - General Examination Of The Subject}
 															\begin{tabular}{p{5in} p{1.5in}}
 																\textbf{Name:}  & \textbf{Age:}\\
 																\textbf{Sex:}   & \textbf{Occupation:}
@@ -1342,7 +1342,7 @@ It is the condition where there is accumulation of free fluid in the interstitia
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
-															\subsection*{Introduction}
+															\section*{Introduction}
 															\addfig{%
 																\begin{figure}
 																	\centering
@@ -1363,7 +1363,7 @@ It is the condition where there is accumulation of free fluid in the interstitia
 															\par
 Examination of the respiratory system consists of Inspection, Palpation, Percussion \& Auscultation.
 
-\subsection*{Inspection}
+\section*{Inspection}
 Ask the subject to sit on a stool with the chest and upper abdomen fully exposed.
 \begin{enumerate}
 \item{\textbf{Shape and symmetry of the chest}}
@@ -1396,7 +1396,7 @@ Ask the subject to sit on a stool with the chest and upper abdomen fully exposed
 \item{\textbf{Abnormal pulsations, dilated veins, scars and sinuses over the chest wall:}}
 \end{enumerate}
 
-\subsection*{Palpation}
+\section*{Palpation}
 																\addfig{%
 																	\centering
 																	\begin{figure}
@@ -1465,7 +1465,7 @@ Ask the subject to sit on a stool with the chest and upper abdomen fully exposed
 \end{enumerate}
 
 
-\subsection*{Percussion}
+\section*{Percussion}
 Percussion  allows  you  to  hear  the  pitch  and  loudness  of  the  percussed  note.  Percussion is done in sequence over corresponding areas on both sides of the chest.
 
 \paragraph{Rules of percussion}
@@ -1498,7 +1498,7 @@ Percussion  allows  you  to  hear  the  pitch  and  loudness  of  the  percussed
 \textbf{To Percuss Lateral chest wall:}Ask the subject to keep the hands over the head.
 \textbf{To Percuss Posterior chest wall:}Ask the subject to fold the arms across the front of the chest which will move the scapulae laterally.
 
-\subsection*{Auscultation:}
+\section*{Auscultation:}
 \begin{itemize}
 \item{The  stethoscope  is  used  to  auscultate  the  breath  sounds,  added  sounds  and  vocal resonance.}
 \item{Instruct the subject to take deep breaths with open mouth.}
@@ -1548,7 +1548,7 @@ Examination of respiratory system is carried out in the following lung areas.
 \item{Infrascapular}
 \end{itemize}
 
-\subsection*{Questions:}
+\section*{Questions:}
 \begin{enumerate}
 \item{What is the normal Respiratory rate?}
 \item{What is Tachypnoea?}
@@ -1566,11 +1566,11 @@ Examination of respiratory system is carried out in the following lung areas.
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
-															\subsection*{Aim}
+															\section*{Aim}
 															To assess the efficiency of the respiratory muscles.
-															\subsection*{Apparatus}
+															\section*{Apparatus}
 															Inch tape, BP apparatus, Peak flow meter, Match stick, Candle and Stop watch .
-															\subsection*{Tests:}
+															\section*{Tests:}
 															\begin{enumerate}
 																\item{Breath holding time (BHT):\par Ask the subject to sit quietly for a few minutes breathing normally. Ask the subject to pinch his nostrils with the thumb and index finger and to hold the breath after a normal inspiration and start the stop watch. The time duration for which the subject is able to hold the breath is noted. Make three such observations at an interval of five minutes. Similarly, record the breath holding times after quiet expiration, deep inspiration and deep expiration.i%
 																	epackage{multirow}
@@ -1601,7 +1601,7 @@ Examination of respiratory system is carried out in the following lung areas.
 																	\paragraph{Procedure}
 																	Ask the subject to take a deep breath and then to blow hard into the mouth piece of the flow meter forcefully with his nostrils closed. The reading on the dial is the PEFR in litres/min. Repeat the procedure thrice at an interval of 1-2 minutes. Normal range is 300-500 litres/minute.}
 															\end{enumerate}
-\subsection*{Questions:}
+\section*{Questions:}
 \begin{enumerate}
 \item{ What is the normal breath holding time?}
 \item{ What is expiratory blast test?}
@@ -1616,7 +1616,7 @@ Examination of respiratory system is carried out in the following lung areas.
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
-															\subsection*{Aim:}
+															\section*{Aim:}
 \addfig{%
 	\begin{figure}[H]
 		\begin{subfigure}{\textwidth}
@@ -1636,11 +1636,11 @@ Examination of respiratory system is carried out in the following lung areas.
 	\end{figure}
 	}
 															To measure Tidal Volume, Expiratory Reserve Volume and Vital Capacity in the given subject.
-															\subsection*{Apparatus Required:}
+															\section*{Apparatus Required:}
 															Student’s Spirometer
-															\subsection*{Spirometer :}
+															\section*{Spirometer :}
 															Student’s Spirometer is also known as Vitalograph or Simple Spirometer. It consists of a double-walled metal cylinder. The outer container is filled with water in which a light-metal gas bell of 6 litre capacity floats. The water acts as an air-tight seal. The bell is attached to a counter-weight by a chain passing over a graduated frictionless pulley. The pulley bears a spring-mounted indicator needle that moves with the pulley and indicates the volume of air present in the bell. A corrugated rubber tube with a mouthpiece acts as the inlet tube.
-															\subsection*{Procedure}
+															\section*{Procedure}
 															All the procedures should be done in standing posture.
 															\begin{enumerate}
 																\item{															\textbf{Tidal Volume:}	The volume of air inspired or expired during quiet respiration}
@@ -1666,14 +1666,14 @@ Examination of respiratory system is carried out in the following lung areas.
 															\end{itemize}
 															\end{enumerate}
 
-															\subsection*{Result}
+															\section*{Result}
 														\begin{itemize}
 														\item[]	Tidal Volume						=\rule{5cm}{1mm}	
 \item[]		Expiratory Reserve Volume				=\rule{5cm}{1mm}
 \item[]			Vital Capacity						=\rule{5cm}{1mm}	
 														\end{itemize}
 
-														\subsection*{Observations}
+														\section*{Observations}
 
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Name:}  & \textbf{Age:}\\
@@ -1694,7 +1694,7 @@ Examination of respiratory system is carried out in the following lung areas.
 	\hline
 \end{tabular}
 \end{table}
-														\subsection*{Questions :}
+														\section*{Questions :}
 														\begin{enumerate}
 \item{														 What are the factors affecting Vital Capacity ?}
 \item{														 Name the volumes and capacities that cannot be measured directly using Student’s Spirometer.}
@@ -1706,6 +1706,115 @@ Examination of respiratory system is carried out in the following lung areas.
 
 														\end{enumerate}
 														%---------}}}
+%---------Stethography----{{{
+															\chapter*{\centering Stethography}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+\section*{Aim:}
+\addfig{%
+	\centering
+	\begin{figure}[H]
+		\includegraphics[scale=.4]{./clinicalPhysioPic/stethography.jpg}
+		\caption*{Stethography}
+		\label{stethography}
+	\end{figure}
+	}
+To record Respiratory movements using Stethograph in the given subject.
+\section*{Apparatus Required:}
+Stethograph , Marey’s tambour, Kymograph, Stop watch, A glass of drinking water .
+Stethograph consists of a corrugated rubber tube with one end sealed and the other end connected to Marey’s tambour. Marey’s tambour has a small metal cup with a rubber diaphragm. When the Stethograph is connected to the tambour, the pressure change in the Stethograph is transmitted to it. Pressure changes are recorded on a moving drum using a lever placed on the rubber diaphragm. During chest expansion, the volume of the stethograph increases and pressure decreases. This causes downward movement of the rubber diaphragm on the Marey’s tambour. The lever on the Marey’s tambour moves down. So inspiration is recorded as a downstroke.
+\section*{Procedure :}
+\begin{itemize}
+\item{Ask the subject to sit with his back towards the recording setup}
+\item{Tie the Stethograph at mid-chest level ( 4th intercostals space )}
+\item{Connect the Stethograph to the Marey’s tambour. Bring the writing lever in contact with the smoked drum}
+\item{Check for the movement of lever with movement of chest wall}
+\end{itemize}
+\subsection*{Normal Respiration :}
+\begin{itemize}
+\item{Record few normal respiratory movements}
+\item{Upstroke of pointer corresponds to expiration and down stroke to Inspiration}
+\end{itemize}
+\subsection*{Effect of Hyperventilation :}
+\begin{itemize}
+\item{Record few normal respiratory movements}
+\item{Ask the subject to hyperventilate for 2 minutes}
+\item{Record the findings}
+\item{Hyperventilation is followed by a short period of Apnoea. Apnoea is recorded as a straight line on the drum.}
+\end{itemize}
+\subsection*{Effect of Swallowing :}
+\begin{itemize}
+\item{Record few normal respiratory movements.}
+\item{Instruct the subject to drink from a glass of water continuously and record the effects.}
+\item{Respiration stops during swallowing. It is recorded as a straight line. This is known as Deglutition Apnoea.}
+\end{itemize}
+
+\subsection*{Breath Holding time :}
+\begin{itemize}
+\item{Record few normal respiratory movements.}
+\item{Instruct the subject to hold his breath for as long as possible at the end of normal Inspiration and record the Breath holding time. It is recorded as a straight line. This period is followed by respiratory excursions. This is called Breaking point.}
+\item{Repeat the procedure at the end of Normal expiration, Maximum Inspiration and Maximum expiration and record the Breath holding time for each.}
+\end{itemize}
+
+\subsection*{Effect of Exercise :}
+\begin{itemize}
+\item{Record few normal respiratory movements.}
+\item{Detach the tube and ask the subject to exercise for 3 minutes (sit ups).}
+\item{Re-attach the tube and record the respiratory movements.}
+\item{Hyperpnoea –i.e. increased rate and depth of respiration is seen. Slowly the respiration returns back to normal.}
+\end{itemize}
+
+\section*{Questions :}
+\begin{enumerate}
+\item{What is Deglutition Apnoea ?}
+\item{What is the effect of Exercise on respiration ?}
+\item{What is the normal Breath-holding time in adults?}
+\item{What is the physiological basis for Breaking point ?}
+\item{Mention the changes in respiration following hyperventilation.}
+\item{What is Periodic breathing ? Give few examples.}
+\end{enumerate}
+%--------}}}
+
+															\chapter*{\centering Examination of the Arterial Pulse}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+\section*{Definition:}
+Arterial pulse is the rhythmic expansion of the arterial wall due to transmission of pressure waves along their walls during each systole of the heart.
+
+\section*{Procedure:}
+Examination of the arterial pulse is done to assess the following parameters:
+\begin{enumerate}
+	\item{\textbf{Rate:}\newline
+		Normal rate is 60-100 /min.
+		\par \textbf{Bradycardia :} When the pulse rate is less than 60/min
+		\begin{itemize}
+			\item[]\textbf{Physiological causes:} Sleep, old age, trained athletes
+			\item[]\textbf{Pathological causes:} Heart blocks, Myxoedema, increased intracranial tension
+		\end{itemize}
+		\par \textbf{Tachycardia:}When the pulse rate is more than 100/min .
+		\begin{itemize}
+			\item[]\textbf{Physiological causes:}Exercise, Emotion, Excitement and in newborn
+			\item[]\textbf{Pathological causes:}Fever ,anemia, Thyrotoxicosis.
+		\end{itemize}
+		}
+
+	\item{\textbf{Rhythm}
+When the interval between the pulse wave is constant, the pulse is said to be regular in rhythm .When the spacing is not constant the pulse is irregular.	
+		
+		}
+\item{Volume}
+\item{Character}
+\item{Condition of the vessel wall}
+\item{Radiofemoral delay}
+\item{Examination of other peripheral pulses.}
+\end{enumerate}
+
+Radial pulse is examined for Rate, Rhythm and Volume
+\par
+Hold the subjects right arm in the semi prone position with slight flexion at the wrist. The radial pulse is palpated using the right index, middle and ring fingers by gently compressing the artery against the radial styloid process. Count for one full minute.
 											    \end{document}
+
 											    
 
