arterial pulses partial

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -1781,6 +1781,22 @@ Stethograph consists of a corrugated rubber tube with one end sealed and the oth
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
 \section*{Definition:}
+\addfig{%
+	\centering
+	\begin{figure}[H]
+		\begin{subfigure}[t]{.29\textwidth}
+			\includegraphics[scale=.5]{./clinicalPhysioPic/carotidPulse.jpg}
+			\caption*{Carotid Pulse}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.59\textwidth}
+			\includegraphics[scale=1]{./clinicalPhysioPic/radialPulse.jpg}
+			\caption*{Radial Pulse}
+		\end{subfigure}
+		\caption*{Examination Of Arterial Pulses}
+		\label{arterialPulses}
+	\end{figure}
+	}
 Arterial pulse is the rhythmic expansion of the arterial wall due to transmission of pressure waves along their walls during each systole of the heart.
 
 \section*{Procedure:}
@@ -1802,18 +1818,86 @@ Examination of the arterial pulse is done to assess the following parameters:
 
 	\item{\textbf{Rhythm}
 When the interval between the pulse wave is constant, the pulse is said to be regular in rhythm .When the spacing is not constant the pulse is irregular.	
-		
+		\par \textbf{Sinus arrhythmia:} This is a normal finding .The pulse rate increases during inspiration and decreases during expiration. 		
+		\par \textbf{Abnormal Rhythms (Arrythymias):}
+		\begin{itemize}
+			\item[]				\textbf{Regularly irregular rhythm:} Extrasystoles or ventricular premature contractions
+			\item[]				\textbf{Irregularly irregular rhythm:} Atrial Fibrillation.
+		\end{itemize}
 		}
-\item{Volume}
-\item{Character}
-\item{Condition of the vessel wall}
-\item{Radiofemoral delay}
-\item{Examination of other peripheral pulses.}
+	\item{\textbf{Volume}
+\par It is the degree of expansion of arterial vessel wall during the passage of the pulse wavefront.
+		\begin{itemize}
+\item{The pulse volume depends on the stroke volume and arterial compliance .}
+\item{High volume pulse or pulsus magnus is observed in aortic incompetence, beriberi, anemia and fever.}
+\item{Low volume pulse or pulsus parvus is observed in aortic stenosis and shock.}
+		\end{itemize}
+		}
+
+	\item{\textbf{Character}
+\par Character of the pulse wave is best appreciated by palpating the carotid    artery in the neck.
+		\paragraph{Certain Abnormal character of pulse:}
+		\begin{itemize}
+			\item[]\textbf{Collapsing pulse:} Also known as water hammer pulse, is characterized by rapid upstroke and rapid downstroke. It is observed in aortic regurgitation.
+			\item[]\textbf{Pulsus alternans:} A pulse waveform showing alternating strong and weak beats .It is observed in left ventricular failure.
+		\end{itemize}
+		}
+	\item{\textbf{Condition of the vessel wall}
+\par It is assessed in the radial artery .The artery in the young individual is elastic and compliant .It becomes thickened like a cord due to atherosclerosis and calcification in old age. Hence it becomes palpable in them.
+		}
+	\item{\textbf{Radiofemoral delay}
+\par Both radial and femoral artery are palpated simultaneously by the examiner .Normally, there is no delay between the appearance of pulse in the radial and femoral artery.
+		\par Radiofemoral delay is seen in Coarctation of Aorta, where radial pulse is felt before femoral pulse.}
 \end{enumerate}
 
-Radial pulse is examined for Rate, Rhythm and Volume
+\section*{Examination of other peripheral pulses.}
+
 \par
-Hold the subjects right arm in the semi prone position with slight flexion at the wrist. The radial pulse is palpated using the right index, middle and ring fingers by gently compressing the artery against the radial styloid process. Count for one full minute.
+\subsection*{\textbf{Radial pulse :}} Palpated against the radial styloid process.  Radial pulse is examined for Rate, Rhythm and Volume Hold the subjects right arm in the semi prone position with slight flexion at the wrist. The radial pulse is palpated using the right index, middle and ring fingers by gently compressing the artery against the radial styloid process. Count for one full minute.
+\subsection*{\textbf{Brachial pulse:}} Palpated in the antecubital fossa medial to the biceps tendon.
+\subsection*{\textbf{Carotid pulse:}} Palpated between the thyroid cartilage and anterior border of the sternocleidomastoid muscle .Do not examine the carotid pulse simultaneously on both sides.
+\subsection*{\textbf{Popliteal pulse :}}The subject’s knees are flexed at an angle of 120$^{\circ}$ .The artery is palpated with the finger tips of both the hands placed in the popliteal fossa with the thumb resting on his patella.
+Posterior tibial pulse: Palpated 1cm below and behind the medial malleolus .
+\subsection*{\textbf{Dorsalis pedis pulse:}} Palpated just lateral to the extensor hallucis tendon .
+
+\section*{Examination Of The Venous Pulse :}
+Measurement of venous waves in the neck helps to determine the right atrial hich is transmitted to the right internal jugular vein .
+\begin{itemize}
+\item{Ask the subject to lie down in a couch ,and raise the head end of the couch to 45$^{\circ}$, so that the back of the subject is supported and the neck muscles are relaxed.}
+\item{Ask the subject to turn to the left and look for venous pulsations in between the two heads of sernocleidomastoid on the right side of his neck.}
+\item{In normal persons in this position, the venous pulse appears just at the upper border of the clavicle.}
+\item{Venous pulse above the clavicle in this position is considered as raised JVP.}
+\end{itemize}
+\subsection*{Measurement}
+\begin{itemize}
+\item{Place a scale at the level of the top of the pulse wave in the neck horizontally Measure the vertical distance from sternal angle to the horizontal scale, by using another scale.}
+\item{Pulsation in the internal jugular vein is more reliable as it directly reflects the pressure changes in the right atrium .}
+\end{itemize}
+
+\subsection*{External jugular veins are not reliable because:-}
+\begin{itemize}
+	\item[]{External jugular veins has many valves.}
+	\item[]{External jugular vein passes through fascial planes, in the neck. }
+\end{itemize}
+\subsection*{The venous pulse can be differentiated from arterial pulse in the neck by}
+\begin{itemize}
+\item[]{Venous pulse is better seen than felt .Arterial pulse is better felt.}
+\item[]{Venous pulse has a definite upper level, which falls during inspiration.}
+\item[]{Gentle pressure on the right hypochondrium will raise the venous pulse level due to a transient increase in venous return (Hepato jugular reflex).}
+\item[]{By exerting moderate pressure above the clavicle with a finger, venous pulse can be obliterated.}
+\item[]{Two to three waves can be seen in venous pulse.}
+\end{itemize}
+
+\section*{Questions:}
+\begin{enumerate}
+\item{Define pulse.}
+\item{What is the cause for sinus bradycardia in athelets?}
+\item{How will you examine for collapsing pulse? Name a condition producing collapsing pulse?}
+\item{What is pulse deficit?}
+\item{What is pulsus alternans?}
+\item{What is pulsus paradoxus?}
+\item{What are the waves seen in JVP?}
+\end{enumerate}
 											    \end{document}
 
 											    
